--- a/ProjectGameDevelopment/ProjectGameDevelopment.csproj
+++ b/ProjectGameDevelopment/ProjectGameDevelopment.csproj
@@ -15,6 +15,7 @@
     <Compile Remove="AnimationSection\Class1.cs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Apos.Gui" Version="1.0.11" />
     <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.8.1.303" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
   </ItemGroup>
